unpackaged/main/default/objects/sked_Notification_Queue_Item__c/sked_Notification_Queue_Item__c.object-meta.xml
<CustomObject>
    <label>Notification Queue Item</label>
    <nameField>
        <displayFormat>NQI-{000000}</displayFormat>
        <label>Notification Queue Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Queue Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>