unpackaged/main/default/objects/sked_Notification_Queue_Item__c/fields/sked_Batch_Params_3__c.field-meta.xml
<CustomField>
    <fullName>sked_Batch_Params_3__c</fullName>
    <label>Batch Params 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>