unpackaged/main/default/objects/sked_Notification_Queue_Item__c/fields/sked_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>sked_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>