unpackaged/main/default/objects/sked_Notification_Queue_Item__c/fields/sked_Notification_Setting_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Notification_Setting_Id__c</fullName>
    <label>Notification Setting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>