unpackaged/main/default/objects/sked_Notification_Queue_Item__c/fields/sked_Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Notification_Type__c</fullName>
    <label>Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>